--- a/uiAutomation/test-output/index.html
+++ b/uiAutomation/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Vinod_Rajapantula\AppData\Local\Temp\testng-eclipse--802242417\testng-customsuite.xml</span>
+                    <span>C:\Users\Vinod_Rajapantula\AppData\Local\Temp\testng-eclipse--1573347668\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.uiAutomation.homepage.TC001_VerifyLoginWithInvalidCredentailsToAutoMationPractices" hash-for-method="myTest">myTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.uiAutomation.homepage.TC003_VerifyLoginWithDifferentRecords" hash-for-method="testLogin(aaaa@gmail.com, aaaa)">testLogin(aaaa@gmail.com, aaaa)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.automation.uiAutomation.homepage.TC001_VerifyLoginWithInvalidCredentailsToAutoMationPractices</span>
+              <span class="class-name">com.automation.uiAutomation.homepage.TC003_VerifyLoginWithDifferentRecords</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="myTest">
-                  </a> <!-- myTest -->
-                  <span class="method-name">myTest</span>
+                  <a name="testLogin(aaaa@gmail.com, aaaa)">
+                  </a> <!-- testLogin(aaaa@gmail.com, aaaa) -->
+                  <span class="method-name">testLogin</span>
+                  <span class="parameters">(aaaa@gmail.com, aaaa)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Vinod_Rajapantula\AppData\Local\Temp\testng-eclipse--802242417\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Vinod_Rajapantula\AppData\Local\Temp\testng-eclipse--1573347668\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +145,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.automation.uiAutomation.homepage.TC001_VerifyLoginWithInvalidCredentailsToAutoMationPractices&quot;/&gt;
+      &lt;class name=&quot;com.automation.uiAutomation.homepage.TC003_VerifyLoginWithDifferentRecords&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,9 +187,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'myTest')
-data.setCell(0, 2, 'com.automation.uiAutomation.homepage.TC001_VerifyLoginWithInvalidCredentailsToAutoMationPractices')
-data.setCell(0, 3, 3240);
+data.setCell(0, 1, 'testLogin')
+data.setCell(0, 2, 'com.automation.uiAutomation.homepage.TC003_VerifyLoginWithDifferentRecords')
+data.setCell(0, 3, 3233);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -219,18 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.automation.uiAutomation.homepage.TC001_VerifyLoginWithInvalidCredentailsToAutoMationPractices</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.automation.uiAutomation.homepage.TC003_VerifyLoginWithDifferentRecords</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">myTest</span>
-                <span class="method-start">9259 ms</span>
+                <span class="method-name">testLogin(aaaa@gmail.com, aaaa)</span>
+                <span class="method-start">9363 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">endTest</span>
-                <span class="method-start">12500 ms</span>
+                <span class="method-start">12597 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
